2004-04-20  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* libmuine/player-gst.c: (player_init), (player_construct),
	(player_new), (player_set_file), (player_get_volume):
	* libmuine/player-xine.c: (player_construct), (player_new),
	(player_open), (player_set_file):
	* libmuine/player.h:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Much improved error handling.

2004-04-19  Jorn Baayen  <jbaayen@gnome.org>

	* src/ColoredCellRendererPixbuf.cs:

	Simplify.

2004-04-18  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:

	Change "Skip to" shortcut from Ctrl-T to T.

2004-04-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/muine.in:

	Add a "cd $HOME" to avoid the "loading libmuine/ as the libmuine dll"
	bug. Lee's idea ..

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	A data/images/muine-about.png:
	* src/About.cs:
	* src/Makefile.am:

	Use new logo by Andreas Kwiatkowski (kwiatkowski@typorism.com) in
	the about box.

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Require mono 0.31.

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/FileSelector.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Always save playlists with an m3u extension, only open playlist
	files with a m3u extension.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/EllipsizingLabel.cs:

	Replace an unnecessary DllImport.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Use Path.* where appropiate. (Thanks Lee!)

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	A data/glade/GroupEditor.glade:
	* data/glade/Makefile.am:
	A data/glade/PlaylistFilling.glade:

	Commit glade files for the groups stuff.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	R src/GroupWindow.cs:
	* src/Makefile.am:

	Remove unused code.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* src/PlaylistWindow.cs:

	Release preparation.
