@@ -64,7 +64,7 @@ public class CoverDatabase
 		dbf = db_open (filename, version, out error);
 
 		if (dbf == IntPtr.Zero)
-			throw new Exception (String.Format (Muine.Catalog.GetString ("Failed to open database: {0}"), error));
+			throw new Exception (error);
 
 		dbf_box = dbf;
 
